removes the openssl command and uses gpg to encrypt the file

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -102,20 +102,15 @@ jobs:
           cat << EOF > ${HOME}/.kube/config
           Line1
           EOF
-          # gpg --batch --symmetric --output kube_config.gpg ${HOME}/.kube/config
-          gpg --encrypt -r runner@mygithub.com --output kube_config.gpg ${HOME}/.kube/config
-          ls
-          pwd
 
       - name: Encrypts the kubeconfig file
-        if: false
-        run: openssl enc -aes-256-cbc -salt -in  ${HOME}/.kube/config -out kube_config.enc -k ${PASSPHRASE}
+        run: gpg --encrypt -r runner@mygithub.com --output kube_config.gpg ${HOME}/.kube/config
 
       - name: Pushes kubeconfig artifact
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: kube_config.enc
-          path: ${GITHUB_WORKSPACE}/kube_config.enc
+          name: kube_config.gpg
+          path: kube_config.gpg
 
   manages_aws_secrets:
     runs-on: ubuntu-latest
