creates fake kubeconfig file to test the encryption without creation the cluster

--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -95,6 +95,13 @@ jobs:
           echo ${GPG_PUBLIC_KEY} | base64 --decode | gpg --import
           echo ${GPG_PRIVATE_KEY} | base64 --decode | gpg --import --batch
 
+      - name: Creates fake kubeconfig file
+        run: |
+          mkdir ${HOME}/.kube/
+          cat << EOF > ${HOME}/.kube/config
+          Line1
+          EOF
+
       - name: Encrypts the kubeconfig file
         run: gpg --encrypt -r runner@mygithub.com --output kube_config.gpg ${HOME}/.kube/config
 
