adds the missing env vars

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -21,7 +21,11 @@ jobs:
         CODEPIPELINE_POLICY_NAME: cv-codepipeline-policy
         CODEBUILD_ROLE_NAME: cv-codebuild-role
         CODEBUILD_POLICY_NAME: cv-codebuild-policy
-        KVM_KEY_ARN: ""
+        GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
+        GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+        GPG_TRUST_OWNERS: ${{ secrets.GPG_TRUST_OWNERS }}
+        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+
     steps:
       - name: Setup the runner
         run: sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
