shows the values

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -28,7 +28,9 @@ jobs:
 
     steps:
       - name: Setup the runner
-        run: sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
+        run: |
+          ls {GITHUB_WORKSPACE}/.github/scripts
+          sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
 
       - name: Import the gpg components
         run: |
