shows the values

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -29,6 +29,7 @@ jobs:
     steps:
       - name: Setup the runner
         run: |
+          ls -all {GITHUB_WORKSPACE}
           ls {GITHUB_WORKSPACE}/.github/scripts
           sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
 
