shows the values

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -29,8 +29,8 @@ jobs:
     steps:
       - name: Setup the runner
         run: |
-          ls -all {GITHUB_WORKSPACE}
-          ls {GITHUB_WORKSPACE}/.github/scripts
+          ls -all ${GITHUB_WORKSPACE}
+          ls ${GITHUB_WORKSPACE}/.github/scripts
           sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
 
       - name: Import the gpg components
