--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -27,6 +27,9 @@ jobs:
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3.5.3
+
       - name: Setup the runner
         run: |
           ls -all ${GITHUB_WORKSPACE}
