lists the content of GITHUB_WORKSPACE

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -32,7 +32,6 @@ jobs:
 
       - name: Setup the runner
         run: |
-          ls -all ${GITHUB_WORKSPACE}
           ls ${GITHUB_WORKSPACE}/.github/scripts
           sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
 
@@ -49,6 +48,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+
+      - name: List the directory
+        run: |
+           echo "------"
+           ls -all ${{ github.workspace }}
+           echo "------"
+           ls -all ${GITHUB_WORKSPACE}
 
       - name: Download artifact
         uses: actions/download-artifact@v3
