shows the env vars

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -54,7 +54,7 @@ jobs:
            echo "------"
            ls -all ${{ github.workspace }}
            echo "------"
-           ls -all ${GITHUB_WORKSPACE}
+           env
 
       - name: Download artifact
         uses: actions/download-artifact@v3
