gets the RUN_ID of the workflow that uploaded the artifact in order to download the artifact with gh cli

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -25,6 +25,8 @@ jobs:
         GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
         GPG_TRUST_OWNERS: ${{ secrets.GPG_TRUST_OWNERS }}
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        WORKFLOW_NAME: cv-infrastructure.yml
 
     steps:
       - name: Checkout code
@@ -49,17 +51,16 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: List the directory
+      - name: List the directory to download the artifact
         run: |
-           echo "------"
-           ls -all ${{ github.workspace }}
-           echo "------"
-           env
+          RUN_ID=`gh run list --workflow ${WORKFLOW_NAME} --json databaseId --jq .[0].databaseId`
+          gh run download ${RUN_ID} -n kube_config.gpg
+          ls
 
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: ${{ github.workspace }}/kube_config.gpg
+      # - name: Download artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: ${{ github.workspace }}/kube_config.gpg
 
       - name: Decrypt kubeconfig
         run: gpg --decrypt --passphrase GPG_PASSPHRASE kube_config.gpg
