--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -53,17 +53,15 @@ jobs:
 
       - name: List the directory to download the artifact
         run: |
+          mkdir ${GITHUB_WORKSPACE}/artifacts
           RUN_ID=`gh run list --workflow ${WORKFLOW_NAME} --json databaseId --jq .[0].databaseId`
-          gh run download ${RUN_ID} -n kube_config.gpg
-          ls
-
-      # - name: Download artifact
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: ${{ github.workspace }}/kube_config.gpg
+          gh run download ${RUN_ID} --dir ${GITHUB_WORKSPACE}/artifacts -n kube_config.gpg
 
       - name: Decrypt kubeconfig
-        run: gpg --decrypt --passphrase GPG_PASSPHRASE kube_config.gpg
+        run: |
+          mkdir ${HOME}/.kube/
+          gpg --decrypt --output ${HOME}/.kube/config --passphrase GPG_PASSPHRASE ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
         if: false
