includes the tty env var to sort out Inappropriate ioctl for device error

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Decrypt kubeconfig
         run: |
+          export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
           gpg --decrypt --output ${HOME}/.kube/config --passphrase GPG_PASSPHRASE ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
