solves typo in the decrypt command

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -27,6 +27,7 @@ jobs:
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         WORKFLOW_NAME: cv-infrastructure.yml
+        RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
 
     steps:
       - name: Checkout code
@@ -61,7 +62,7 @@ jobs:
         run: |
           export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
-          gpg --decrypt --output ${HOME}/.kube/config --passphrase GPG_PASSPHRASE ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          gpg --decrypt --output ${HOME}/.kube/config -recipient ${RECIPIENT_ID} --passphrase ${GPG_PASSPHRASE} ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
