fixes decryption command

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
-          gpg --decrypt --output ${HOME}/.kube/config -recipient ${RECIPIENT_ID} --passphrase ${GPG_PASSPHRASE} ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          gpg --decrypt ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg | gpg --output ${HOME}/.kube/config --decrypt --passphrase ${GPG_PASSPHRASE}
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
