show the content of artifiacts directory

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -62,6 +62,7 @@ jobs:
         run: |
           export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
+          ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --decrypt ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg | gpg --output ${HOME}/.kube/config --decrypt --passphrase ${GPG_PASSPHRASE}
           cat ${HOME}/.kube/config
 
