uses different gpg command

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -63,7 +63,7 @@ jobs:
           export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
           ls ${GITHUB_WORKSPACE}/artifacts/
-          gpg --decrypt ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg | gpg --output ${HOME}/.kube/config --decrypt --passphrase ${GPG_PASSPHRASE}
+          gpg --decrypt --output ${HOME}/.kube/config ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
