shows gpg keys avaalable

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -63,6 +63,7 @@ jobs:
           export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
           ls ${GITHUB_WORKSPACE}/artifacts/
+          gpg --list-key
           gpg --decrypt --output ${HOME}/.kube/config ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
