--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -64,6 +64,7 @@ jobs:
           mkdir ${HOME}/.kube/
           ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --list-key
+          gpg --list-secret-keys
           gpg --decrypt --output ${HOME}/.kube/config ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
