--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -65,7 +65,7 @@ jobs:
           ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --list-key
           gpg --list-secret-keys
-          gpg --decrypt --output ${HOME}/.kube/config ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          gpg --decrypt --output ${HOME}/.kube/config --recipient ${RECIPIENT_ID} ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
