comments GPG_TTY env var

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Decrypt kubeconfig
         run: |
-          export GPG_TTY=$(tty)
+          # export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
           ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --list-key
