uses the file gpg.conf and gpg-agent.conf to sort out public key decryption failed: Inappropriate ioctl for device error

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -44,6 +44,11 @@ jobs:
           gpg --import-ownertrust < trust-file
           echo ${GPG_PUBLIC_KEY} | base64 --decode | gpg --import
           echo ${GPG_PRIVATE_KEY} | base64 --decode | gpg --import --batch
+          echo "use-agent" >> ${HOME}/.gnupg/gpg.conf
+          echo "pinentry-mode loopback" >> ${HOME}/.gnupg/gpg.conf
+          tail ${HOME}/.gnupg/gpg-agent.conf
+          echo "allow-loopback-pinentry" >> ${HOME}/.gnupg/gpg-agent.conf
+
 
       - name: Setup AWS CLI
         uses: aws-actions/configure-aws-credentials@v3
