fixes touch rather than tail

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -46,7 +46,7 @@ jobs:
           echo ${GPG_PRIVATE_KEY} | base64 --decode | gpg --import --batch
           echo "use-agent" >> ${HOME}/.gnupg/gpg.conf
           echo "pinentry-mode loopback" >> ${HOME}/.gnupg/gpg.conf
-          tail ${HOME}/.gnupg/gpg-agent.conf
+          touch ${HOME}/.gnupg/gpg-agent.conf
           echo "allow-loopback-pinentry" >> ${HOME}/.gnupg/gpg-agent.conf
 
 
