enables GPG_TTY env var and flags batch and yes to gpg command to sort out the problem: cannot open /dev/tty: No such device or address

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -65,12 +65,12 @@ jobs:
 
       - name: Decrypt kubeconfig
         run: |
-          #export GPG_TTY=$(tty)
+          export GPG_TTY=$(tty)
           mkdir ${HOME}/.kube/
           ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --list-key
           gpg --list-secret-keys
-          gpg --no-tty --decrypt --output ${HOME}/.kube/config --recipient runner@mygithub.com ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          gpg --batch --yes --decrypt --output ${HOME}/.kube/config --recipient runner@mygithub.com ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
