--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -70,7 +70,7 @@ jobs:
           ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --list-key
           gpg --list-secret-keys
-          gpg --decrypt --output ${HOME}/.kube/config --recipient runner@mygithub.com ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          gpg --decrypt --output ${HOME}/.kube/config --recipient runner@mygithub.com --passphrase ${GPG_PASSPHRASE} ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
