--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -70,8 +70,7 @@ jobs:
           ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --list-key
           gpg --list-secret-keys
-          gpg --list-only ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
-          gpg --decrypt --output ${HOME}/.kube/config --default-key ${RECIPIENT_ID} --passphrase ${GPG_PASSPHRASE} ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          gpg --decrypt ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
