--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -70,7 +70,7 @@ jobs:
           ls ${GITHUB_WORKSPACE}/artifacts/
           gpg --list-key
           gpg --list-secret-keys
-          echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --decrypt ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
+          echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${HOME}/.kube/config --decrypt ${GITHUB_WORKSPACE}/artifacts/kube_config.gpg
           cat ${HOME}/.kube/config
 
       - name: Generate KMS key and save the KVM key in GH secrets
