--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -18,7 +18,6 @@ jobs:
         GPG_TRUST_OWNERS: ${{ secrets.GPG_TRUST_OWNERS }}
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        WORKFLOW_NAME: cv-infrastructure.yml
         RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
 
     steps:
@@ -52,3 +51,47 @@ jobs:
         with:
           name: arn.gpg
           path: arn.gpg
+
+  store_cloudformation_secrets:
+    runs-on: ubuntu-latest
+    environment:
+        name: develop
+    env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
+        GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+        GPG_TRUST_OWNERS: ${{ secrets.GPG_TRUST_OWNERS }}
+        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        GITHUB_USER: ${{ secrets.GITHUB_USER }}
+        SOURCE_REPOSITORY: ${{ secrets.SOURCE_REPOSITORY }}
+        RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
+        CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
+        KVM_ARN: ""
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3.5.3
+
+      - name: Setup the runner
+        run: sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
+
+      - name: Setup gpg agent
+        run: sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-agent.sh
+
+      - name: Get the KVM ARN as artifact
+        uses: actions/download-artifact@v2.1.1
+        with:
+          name: arn.gpg
+          path: ${GITHUB_WORKSPACE}/arn
+
+      - name: Decrypt arn
+        run: |
+          cat ${GITHUB_WORKSPACE}/arn
+          KVM_ARN = "myvalue"
+          echo ${KVM_ARN}
+          echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt arn.gpg
+
+      - name: Saves the secrets in ssm to be used by cloudformation template
+        if: false
+        run: aws ssm put-parameter --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id ${KVM_ARN}
