updates the artifact name

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Get the KVM ARN as artifact
         uses: actions/download-artifact@v2.1.1
         with:
-          name: arn.gpg
+          name: arn
           path: ${GITHUB_WORKSPACE}/arn
 
       - name: Decrypt arn
