includes the dependency between jobs to let the first job to produce the artifact in order to download it in the second job

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -54,6 +54,7 @@ jobs:
 
   store_cloudformation_secrets:
     runs-on: ubuntu-latest
+    needs: generate_kms_key
     environment:
         name: develop
     env:
