updates the name of the artifact

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Get the KVM ARN as artifact
         uses: actions/download-artifact@v2.1.1
         with:
-          name: arn
+          name: arn.gpg
           path: ${GITHUB_WORKSPACE}/arn
 
       - name: Decrypt arn
