updates the path of the downloaded artifact

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -84,11 +84,11 @@ jobs:
         uses: actions/download-artifact@v2.1.1
         with:
           name: arn.gpg
-          path: ${GITHUB_WORKSPACE}/arn
+          path: arn
 
       - name: Decrypt arn
         run: |
-          cat ${GITHUB_WORKSPACE}/arn
+          cat arn
           KVM_ARN = "myvalue"
           echo ${KVM_ARN}
           echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt arn.gpg
