checks the env var to be used in later steps

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -69,7 +69,6 @@ jobs:
         SOURCE_REPOSITORY: ${{ secrets.SOURCE_REPOSITORY }}
         RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
         CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
-        KVM_ARN: ""
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -88,10 +87,12 @@ jobs:
       - name: Decrypt arn
         run: |
           ls
-          KVM_ARN = "myvalue"
+          export KVM_ARN = "myvalue"
           echo ${KVM_ARN}
           echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt arn.gpg
 
       - name: Saves the secrets in ssm to be used by cloudformation template
-        if: false
-        run: aws ssm put-parameter --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id ${KVM_ARN}
+        run: |
+          echo ${KVM_ARN}
+          cat ${GITHUB_WORKSPACE}/arn
+          # aws ssm put-parameter --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id ${KVM_ARN}
