updates the env var assignement

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Decrypt arn
         run: |
           ls
-          export KVM_ARN = "myvalue"
+          export KVM_ARN=myvalue
           echo ${KVM_ARN}
           echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt arn.gpg
 
