--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -95,4 +95,4 @@ jobs:
         run: |
           echo ${KVM_ARN}
           cat ${GITHUB_WORKSPACE}/arn
-          # aws ssm put-parameter --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id ${KVM_ARN}
+          aws ssm put-parameter --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id $(cat ${GITHUB_WORKSPACE}/arn)
