adds the setup credentials step

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -79,6 +79,12 @@ jobs:
       - name: Setup gpg agent
         run: sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-agent.sh
 
+      - name: Setup AWS credentials
+        run: |
+          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID}
+          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY}
+          aws configure set default.region us-west-1
+
       - name: Get the KVM ARN as artifact
         uses: actions/download-artifact@v2.1.1
         with:
