fixes typo in aws credentials env vars name

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -81,8 +81,8 @@ jobs:
 
       - name: Setup AWS credentials
         run: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID}
-          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY}
+          aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
+          aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
           aws configure set default.region us-west-1
 
       - name: Get the KVM ARN as artifact
