--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -91,14 +91,9 @@ jobs:
           name: arn.gpg
 
       - name: Decrypt arn
-        run: |
-          ls
-          export KVM_ARN=myvalue
-          echo ${KVM_ARN}
-          echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt arn.gpg
+        run: echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt arn.gpg
 
       - name: Saves the secrets in ssm to be used by cloudformation template
         run: |
-          echo ${KVM_ARN}
           cat ${GITHUB_WORKSPACE}/arn
-          aws ssm put-parameter --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "$(cat ${GITHUB_WORKSPACE}/arn)"
+          aws ssm put-parameter --region us-east-1 --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "$(cat ${GITHUB_WORKSPACE}/arn)"
