updates the region both in the action to setup aws creds and in the aws ssm command

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: us-west-1
  
       - name: Generate KMS key and save it as artifact
         run: |
@@ -96,4 +96,4 @@ jobs:
       - name: Saves the secrets in ssm to be used by cloudformation template
         run: |
           cat ${GITHUB_WORKSPACE}/arn
-          aws ssm put-parameter --region us-east-1 --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "$(cat ${GITHUB_WORKSPACE}/arn)"
+          aws ssm put-parameter --region us-west-1 --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "$(cat ${GITHUB_WORKSPACE}/arn)"
