updates the aws ssm command and uses env vars in the respective places. Also, it pushes the secrets in aws ssm as securestrings to use them in the cloudformation template

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -19,6 +19,7 @@ jobs:
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
+        AWS_REGION: ${{ vars.AWS_REGION }}
 
     steps:
       - name: Checkout code
@@ -35,7 +36,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1
+          aws-region: ${AWS_REGION}
  
       - name: Generate KMS key and save it as artifact
         run: |
@@ -44,7 +45,7 @@ jobs:
           echo ${KVM_KEY_ARN} >> ${GITHUB_WORKSPACE}/arn
 
       - name: Encrypts the arn file
-        run: gpg --encrypt -r runner@mygithub.com --output arn.gpg ${GITHUB_WORKSPACE}/arn
+        run: gpg --encrypt -r ${RECIPIENT_ID} --output arn.gpg ${GITHUB_WORKSPACE}/arn
 
       - name: Pushes arn as artifact
         uses: actions/upload-artifact@v3.1.2
@@ -65,10 +66,11 @@ jobs:
         GPG_TRUST_OWNERS: ${{ secrets.GPG_TRUST_OWNERS }}
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        GITHUB_USER: ${{ secrets.GITHUB_USER }}
-        SOURCE_REPOSITORY: ${{ secrets.SOURCE_REPOSITORY }}
+        GITHUB_USER: ${{ vars.GH_USER }}
+        SOURCE_REPOSITORY: ${{ vars.SOURCE_REPOSITORY }}
         RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
-        CLUSTER_NAME: ${{ secrets.CLUSTER_NAME }}
+        CLUSTER_NAME: ${{ vars.CLUSTER_NAME }}
+        AWS_REGION: ${{ vars.AWS_REGION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -83,7 +85,7 @@ jobs:
         run: |
           aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
           aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
-          aws configure set default.region us-west-1
+          aws configure set default.region ${AWS_REGION}
 
       - name: Get the KVM ARN as artifact
         uses: actions/download-artifact@v2.1.1
@@ -95,5 +97,8 @@ jobs:
 
       - name: Saves the secrets in ssm to be used by cloudformation template
         run: |
-          cat ${GITHUB_WORKSPACE}/arn
-          aws ssm put-parameter --region us-west-1 --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "$(cat ${GITHUB_WORKSPACE}/arn)"
+          export KEY_ID=$(cat ${GITHUB_WORKSPACE}/arn)
+          aws ssm put-parameter --region ${AWS_REGION} --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "${KEY_ID}"
+          aws ssm put-parameter --region ${AWS_REGION} --name "CLUSTER_NAME" --value ${CLUSTER_NAME} --type "SecureString" --key-id "${KEY_ID}"
+          aws ssm put-parameter --region ${AWS_REGION} --name "GITHUB_USER" --value ${GITHUB_USER} --type "SecureString" --key-id "${KEY_ID}"
+          aws ssm put-parameter --region ${AWS_REGION} --name "SOURCE_REPOSITORY" --value ${SOURCE_REPOSITORY} --type "SecureString" --key-id "${KEY_ID}"
