--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${AWS_REGION}
+          aws-region: ${{ vars.AWS_REGION }}
  
       - name: Generate KMS key and save it as artifact
         run: |
