adds the flag overwrite to do it when the secret already exists

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Saves the secrets in ssm to be used by cloudformation template
         run: |
           export KEY_ID=$(cat ${GITHUB_WORKSPACE}/arn)
-          aws ssm put-parameter --region ${AWS_REGION} --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "${KEY_ID}"
-          aws ssm put-parameter --region ${AWS_REGION} --name "CLUSTER_NAME" --value ${CLUSTER_NAME} --type "SecureString" --key-id "${KEY_ID}"
-          aws ssm put-parameter --region ${AWS_REGION} --name "GITHUB_USER" --value ${GITHUB_USER} --type "SecureString" --key-id "${KEY_ID}"
-          aws ssm put-parameter --region ${AWS_REGION} --name "SOURCE_REPOSITORY" --value ${SOURCE_REPOSITORY} --type "SecureString" --key-id "${KEY_ID}"
+          aws ssm put-parameter --region ${AWS_REGION} --name "GITHUB_TOKEN" --value ${GITHUB_TOKEN} --type "SecureString" --key-id "${KEY_ID} --overwrite"
+          aws ssm put-parameter --region ${AWS_REGION} --name "CLUSTER_NAME" --value ${CLUSTER_NAME} --type "SecureString" --key-id "${KEY_ID} --overwrite"
+          aws ssm put-parameter --region ${AWS_REGION} --name "GITHUB_USER" --value ${GITHUB_USER} --type "SecureString" --key-id "${KEY_ID} --overwrite"
+          aws ssm put-parameter --region ${AWS_REGION} --name "SOURCE_REPOSITORY" --value ${SOURCE_REPOSITORY} --type "SecureString" --key-id "${KEY_ID} --overwrite"
