--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -5,30 +5,28 @@ on:
       - infrastructure
 jobs:
   setup_roles_and_policies:
-    if: false
     runs-on: ubuntu-latest
     environment:
       name: develop
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      CLUSTER_ROLE_NAME: cv-eks-cluster-role
-      CLUSTER_POLICY_NAME: cv-eks-cluster-policy
-      NODEGROUP_ROLE_NAME: cv-eks-nodegroup-role
-      NODEGROUP_POLICY_NAME: cv-eks-nodegroup-policy
-      CODEPIPELINE_ROLE_NAME: cv-codepipeline-role
-      CODEPIPELINE_POLICY_NAME: cv-codepipeline-policy
-      CODEBUILD_ROLE_NAME: cv-codebuild-role
-      CODEBUILD_POLICY_NAME: cv-codebuild-policy
+      CLUSTER_ROLE_NAME: ${{ vars.CLUSTER_ROLE_NAME }}
+      CLUSTER_POLICY_NAME: ${{ vars.CLUSTER_POLICY_NAME }}
+      NODEGROUP_ROLE_NAME: ${{ vars.NODEGROUP_ROLE_NAME }}
+      NODEGROUP_POLICY_NAME: ${{ vars.NODEGROUP_POLICY_NAME }}
+      CODEPIPELINE_ROLE_NAME: ${{ vars.CODEPIPELINE_ROLE_NAME }}
+      CODEPIPELINE_POLICY_NAME: ${{ vars.CODEPIPELINE_POLICY_NAME }}
+      CODEBUILD_ROLE_NAME: ${{ vars.CODEBUILD_ROLE_NAME }}
+      CODEBUILD_POLICY_NAME: ${{ vars.CODEBUILD_POLICY_NAME }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
 
-      - name: Setup AWS credentials
-        run: |
-          aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID}
-          aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY}
-          aws configure set default.region us-west-1
+      - name: Setup AWS CLI
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Creates the role that will assume the trust policy to deal with the cluster
         run: aws iam create-role --role-name ${CLUSTER_ROLE_NAME} --assume-role-policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-trust-policy.json
@@ -55,9 +53,8 @@ jobs:
         run: aws iam put-role-policy --role-name ${CODEBUILD_ROLE_NAME} --policy-name ${CODEBUILD_POLICY_NAME} --policy-document file://${GITHUB_WORKSPACE}/eksk8s/codebuild-policy.json
 
   create_the_cluster:
-    if: false
     runs-on: ubuntu-latest
-    # needs: setup_roles_and_policies
+    needs: setup_roles_and_policies
     environment:
       name: develop
     env:
@@ -65,10 +62,10 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
-      PASSPHRASE: ${{ secrets.PASSPHRASE }}
       GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       GPG_TRUST_OWNERS: ${{ secrets.GPG_TRUST_OWNERS }}
+      RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -79,16 +76,11 @@ jobs:
           sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
 
       - name: Setup the keys used to create the k8s cluster
-        if: false
         run: |
           mkdir ${HOME}/.ssh/
           echo ${SSH_PRIVATE_KEY} > ${HOME}/.ssh/k8s
           echo ${SSH_PUBLIC_KEY} > ${HOME}/.ssh/k8s.pub
 
-      - name: Creates the k8s cluster using eksctl
-        if: false
-        run: eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
-      
       - name: Import the gpg components
         run: |
           echo ${GPG_TRUST_OWNERS} | base64 --decode > trust-file
@@ -96,34 +88,14 @@ jobs:
           echo ${GPG_PUBLIC_KEY} | base64 --decode | gpg --import
           echo ${GPG_PRIVATE_KEY} | base64 --decode | gpg --import --batch
 
-      - name: Creates fake kubeconfig file
-        run: |
-          mkdir ${HOME}/.kube/
-          cat << EOF > ${HOME}/.kube/config
-          Line1
-          EOF
+      - name: Creates the k8s cluster using eksctl
+        run: eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
 
       - name: Encrypts the kubeconfig file
-        run: gpg --encrypt -r runner@mygithub.com --output kube_config.gpg ${HOME}/.kube/config
+        run: gpg --encrypt -r ${RECIPIENT_ID} --output kube_config.gpg ${HOME}/.kube/config
 
       - name: Pushes kubeconfig artifact
         uses: actions/upload-artifact@v3.1.2
         with:
           name: kube_config.gpg
           path: ${{ github.workspace }}
-
-  manages_aws_secrets:
-    runs-on: ubuntu-latest
-    needs: create_the_cluster
-    if: false
-    environment:
-      name: develop
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      CODEPIPELINE_ROLE_NAME: cv-codepipeline-role
-      CODEPIPELINE_POLICY_NAME: cv-codepipeline-policy
-    steps:
-      - name: Stores the GH_TOKEN in AWS Systems Manager Parameter Store
-        run: aws ssm put-parameter --name "MySecureStringParameter" --value "MySuperSecretValue" --type "SecureString" --key-id "arn:aws:kms:us-east-1:123456789012:key/12345678-1234-1234-1234-123456789012"
