--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -104,7 +104,15 @@ jobs:
           echo ${GPG_PRIVATE_KEY} | base64 --decode | gpg --import --batch
 
       - name: Creates the k8s cluster using eksctl
+        if: false
         run: eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
+
+      - name: Creates fake kubeconfig file
+        run: |
+          mkdir ${HOME}/.kube/
+          cat << EOF > ${HOME}/.kube/config
+          Line1
+          EOF
 
       - name: Encrypts the kubeconfig file
         run: gpg --encrypt -r ${RECIPIENT_ID} --output kube_config.gpg ${HOME}/.kube/config
