--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -35,6 +35,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGION }}
 
+      - name: Setup gpg agent
+        run: sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-agent.sh
+
       - name: Import the gpg components
         run: |
           echo ${GPG_TRUST_OWNERS} | base64 --decode > trust-file
