inserts docker credentials as gh secrets

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -64,6 +64,8 @@ jobs:
         SOURCE_REPOSITORY: ${{ vars.SOURCE_REPOSITORY }}
         RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
         CLUSTER_NAME: ${{ vars.CLUSTER_NAME }}
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -96,3 +98,5 @@ jobs:
           aws ssm put-parameter --region ${AWS_REGION} --name "CLUSTER_NAME" --value ${CLUSTER_NAME} --type "SecureString" --key-id "${KEY_ID}" --overwrite
           aws ssm put-parameter --region ${AWS_REGION} --name "GITHUB_USER" --value ${GITHUB_USER} --type "SecureString" --key-id "${KEY_ID}" --overwrite
           aws ssm put-parameter --region ${AWS_REGION} --name "SOURCE_REPOSITORY" --value ${SOURCE_REPOSITORY} --type "SecureString" --key-id "${KEY_ID}" --overwrite
+          aws ssm put-parameter --region ${AWS_REGION} --name "DOCKER_USERNAME" --value ${DOCKER_USERNAME} --type "SecureString" --key-id "${KEY_ID}" --overwrite
+          aws ssm put-parameter --region ${AWS_REGION} --name "DOCKER_TOKEN" --value ${DOCKER_TOKEN} --type "SecureString" --key-id "${KEY_ID}" --overwrite
