inserts the JWT_TOKEN as secret in ssm. The whole workflow is stopped, check the condition on the very first step

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   generate_kms_key:
+    if: false
     runs-on: ubuntu-latest
     environment:
         name: develop
@@ -66,6 +67,7 @@ jobs:
         CLUSTER_NAME: ${{ vars.CLUSTER_NAME }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+        JWT_TOKEN: ${{ secrets.JWT_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.3
@@ -90,6 +92,11 @@ jobs:
 
       - name: Decrypt arn
         run: echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt arn.gpg
+
+      - name: Saves the JWT_TOKEN
+        run: |
+          export KEY_ID=$(cat ${GITHUB_WORKSPACE}/arn)
+          aws ssm put-parameter --region ${AWS_REGION} --name "JWT_SECRET" --value ${JWT_TOKEN} --type SecureString --key-id "${KEY_ID}" --overwrite
 
       - name: Saves the secrets in ssm to be used by cloudformation template
         run: |
