--- a/.github/workflows/cv-infrastructure.yml
+++ b/.github/workflows/cv-infrastructure.yml
@@ -5,6 +5,7 @@ on:
       - infrastructure
 jobs:
   setup_roles_and_policies:
+    if: false
     runs-on: ubuntu-latest
     environment:
       name: develop
@@ -61,10 +62,7 @@ jobs:
           aws ssm put-parameter --region ${AWS_REGION} --name "CLUSTER_ROLE_NAME" --value ${CLUSTER_ROLE_NAME} --type "SecureString" --key-id "${KEY_ID}" --overwrite
 
       - name: Attaches the policy to the cluster role
-        run: |
-          ROLE_ID=$(aws iam put-role-policy --role-name ${CLUSTER_ROLE_NAME} --policy-name ${CLUSTER_POLICY_NAME} --policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-policy.json --query KeyMetadata.Arn --output text)
-          export KEY_ID=$(cat ${GITHUB_WORKSPACE}/arn)
-          aws ssm put-parameter --region ${AWS_REGION} --name "CLUSTER_ROLE_NAME" --value ${CLUSTER_ROLE_NAME} --type "SecureString" --key-id "${KEY_ID}" --overwrite
+        run: aws iam put-role-policy --role-name ${CLUSTER_ROLE_NAME} --policy-name ${CLUSTER_POLICY_NAME} --policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-cluster-policy.json --query KeyMetadata.Arn --output text
 
       - name: Creates the role that will assume the trust policy to deal with the node-group
         run: |
@@ -73,10 +71,7 @@ jobs:
           aws ssm put-parameter --region ${AWS_REGION} --name "NODEGROUP_ROLE_NAME" --value ${NODEGROUP_ROLE_NAME} --type "SecureString" --key-id "${KEY_ID}" --overwrite
 
       - name: Attaches the policy for the node-group role
-        run: |
-          ROLE_ID=$(aws iam put-role-policy --role-name ${NODEGROUP_ROLE_NAME} --policy-name ${NODEGROUP_POLICY_NAME} --policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-nodegroup-policy.json --query KeyMetadata.Arn --output text)
-          export KEY_ID=$(cat ${GITHUB_WORKSPACE}/arn)
-          aws ssm put-parameter --region ${AWS_REGION} --name "NODEGROUP_ROLE_NAME" --value ${NODEGROUP_ROLE_NAME} --type "SecureString" --key-id "${KEY_ID}" --overwrite
+        run: aws iam put-role-policy --role-name ${NODEGROUP_ROLE_NAME} --policy-name ${NODEGROUP_POLICY_NAME} --policy-document file://${GITHUB_WORKSPACE}/eksk8s/eks-nodegroup-policy.json --query KeyMetadata.Arn --output text
 
       - name: Create the role that will assume the trust policy to deal with the codepipeline service
         run: |
@@ -104,11 +99,13 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ vars.AWS_REGION }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       SSH_PUBLIC_KEY: ${{ secrets.SSH_PUBLIC_KEY }}
       GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
       GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       GPG_TRUST_OWNERS: ${{ secrets.GPG_TRUST_OWNERS }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
       RECIPIENT_ID: ${{ secrets.RECIPIENT_ID }}
     steps:
       - name: Checkout code
@@ -119,7 +116,7 @@ jobs:
           sh ${GITHUB_WORKSPACE}/.github/scripts/eksctl-install.sh
           sh ${GITHUB_WORKSPACE}/.github/scripts/gpg-install.sh
 
-      - name: Setup the keys used to create the k8s cluster
+      - name: Setup the keys to stablish connection between nodes in the k8s cluster
         run: |
           mkdir ${HOME}/.ssh/
           echo ${SSH_PRIVATE_KEY} > ${HOME}/.ssh/k8s
@@ -132,9 +129,14 @@ jobs:
           echo ${GPG_PUBLIC_KEY} | base64 --decode | gpg --import
           echo ${GPG_PRIVATE_KEY} | base64 --decode | gpg --import --batch
 
-      - name: Creates the k8s cluster using eksctl
-        if: false
-        run: eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
+      - name: Download the ARN KVM as artifact
+        run: |
+          mkdir ${GITHUB_WORKSPACE}/artifacts
+          RUN_ID=$(gh run list --workflow ${WORKFLOW_NAME} --json databaseId --jq .[0].databaseId)
+          gh run download ${RUN_ID} --dir ${GITHUB_WORKSPACE}/artifacts -n arn.gpg
+  
+      - name: Decrypt artifact
+        run: echo ${GPG_PASSPHRASE} | gpg --batch --yes --passphrase-fd 0 --output ${GITHUB_WORKSPACE}/arn --decrypt ${GITHUB_WORKSPACE}/artifacts/arn.gpg
 
       - name: Creates fake kubeconfig file
         run: |
@@ -142,6 +144,17 @@ jobs:
           cat << EOF > ${HOME}/.kube/config
           Line1
           EOF
+
+      - name: Creates the k8s cluster using eksctl
+        if: false
+        run: eksctl create cluster -f ${GITHUB_WORKSPACE}/eksk8s/cluster-config.yaml
+
+      - name: Saves the kubeconfig as ssm value
+        run: |
+          base64 ${HOME}/.kube/config > ${GITHUB_WORKSPACE}/kube_encoded
+          KUBE_CONFIG=$(cat ${GITHUB_WORKSPACE}/kube_encoded)
+          export KEY_ID=$(cat ${GITHUB_WORKSPACE}/arn)
+          aws ssm put-parameter --region ${AWS_REGION} --name "KUBE_CONIFG" --value ${KUBE_CONFIG} --type "SecureString" --key-id "${KEY_ID}" --overwrite
 
       - name: Encrypts the kubeconfig file
         run: gpg --encrypt -r ${RECIPIENT_ID} --output kube_config.gpg ${HOME}/.kube/config
